# cmake_template

./: .gitignore  CMakeLists.txt  README.md  build.sh  dev.sh  test.sh
.github/workflows/: release.yml
src/: main.cpp
src/math/: CMakeLists.txt
src/utils/: CMakeLists.txt  print.cpp  print.h
tests/: CMakeLists.txt  test_add.cpp
